--- a/index.html
+++ b/index.html
@@ -5,25 +5,11 @@
     <title>david.mn</title>
     <meta name="description" content="">
     <meta name="author" content="David Michael Nelson">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-    <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <style type="text/css">
-        body {
-            padding-top: 60px;
-        }
-    </style>
-
-    <!-- Le fav and touch icons -->
-    <!--<link rel="shortcut icon" href="images/favicon.ico">-->
-    <!--<link rel="apple-touch-icon" href="images/apple-touch-icon.png">-->
-    <!--<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">-->
-    <!--<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">-->
+    <link href="css/custom.css" rel="stylesheet">
 </head>
 <body>
 <div class="topbar">
@@ -61,7 +47,7 @@
     <div class="content">
         <div class="page-header">
             <h1>david.mn
-                <small>- Just some irrelevant thoughts</small>
+                <small>- Just a bunch of irrelevant thoughts</small>
             </h1>
         </div>
         <div class="row">
