--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <div class="container-fluid">
     <div class="sidebar">
         <div class="well">
-            <h5>Who I am</h5>
+            <h5>Me</h5>
 
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                 condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 
             <p>- <a href="#">more about me</a></p>
-            <h5>Source code</h5>
+            <h5>Open source</h5>
             <ul>
                 <li><a href="http://github.com/dmnelson">GitHub account</a></li>
             </ul>
@@ -47,49 +47,57 @@
     <div class="content">
         <div class="page-header">
             <h1>david.mn
-                <small>- Just a bunch of irrelevant thoughts</small>
+                <small>- Just a bunch of not so relevant thoughts</small>
             </h1>
         </div>
-        <div class="row">
-            <div class="span7">
-                <h2>Heading</h2>
+        <div class="content-body">
+            <div class="row">
+                <div class="span7">
+                    <h2>Heading</h2>
 
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere
-                    velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis
-                    mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+                    <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus
+                        posuere
+                        velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
+                        Duis
+                        mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
 
-                <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                </div>
+                <div class="span7">
+                    <h2>Heading</h2>
+
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna
+                        mollis euismod. Donec sed odio dui. </p>
+
+                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                </div>
             </div>
-            <div class="span7">
-                <h2>Heading</h2>
+            <hr>
+            <!-- Example row of columns -->
+            <div class="row">
+                <div class="span7">
+                    <h2>Heading</h2>
 
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                    mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna
-                    mollis euismod. Donec sed odio dui. </p>
+                    <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus
+                        posuere
+                        velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
+                        Duis
+                        mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
 
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-        </div>
-        <hr>
-        <!-- Example row of columns -->
-        <div class="row">
-            <div class="span7">
-                <h2>Heading</h2>
+                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                </div>
+                <div class="span7">
+                    <h2>Heading</h2>
 
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere
-                    velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis
-                    mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna
+                        mollis euismod. Donec sed odio dui. </p>
 
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span7">
-                <h2>Heading</h2>
-
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                    mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna
-                    mollis euismod. Donec sed odio dui. </p>
-
-                <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                </div>
             </div>
         </div>
 
