--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ id: home
         </h2>
         <p>{{ post.content |strip_html | truncatewords:50 }}</p>
 
-        <p><a class="btn" href="{{ post.url }}">read more &raquo;</a></p>
+        <p><a class="btn primary small" href="{{ post.url }}">read more &raquo;</a></p>
     </div>
 </div>
 
