--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 ---
 layout: default
 priority: 1
-id: home
+section: blog
 ---
 
 {% for post in site.posts %}
 <div class="row">
     <div class="span">
         <h2>
-            {{ post.title }}
+            <a  href="{{ post.url }}">{{ post.title }}</a>
             <small>@ {{ post.date | date_to_string }}</small>
         </h2>
-        <p>{{ post.content |strip_html | truncatewords:50 }}</p>
+        <p>{{ post.content | strip_html | truncatewords:50 }} - <a class="" href="{{ post.url }}">read more &raquo;</a></p>
 
-        <p><a class="btn primary small" href="{{ post.url }}">read more &raquo;</a></p>
     </div>
 </div>
 
