--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,7 @@
 ---
 layout: page
 priority: 1
-section: blog
-title: blog
+section: home
+title: home
 permalink: /
 ---
-{% assign show_comment_button = true %}
-{% for post in site.posts %}
-    {% assign content = post.content %}
-    {% include posts/post.html %}
-    {% include posts/share.html %}
-    {% unless forloop.last %}
-        <hr/>
-    {% endunless  %}
-{% endfor %}
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'davidmn'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-        var s = document.createElement('script');
-        s.async = true;
-        s.type = 'text/javascript';
-        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-</script>
