--- a/src/index.html
+++ b/src/index.html
@@ -5,4 +5,13 @@ section: home
 title: home
 permalink: /
 ---
-*David*
+<div class="row-fluid">
+  <div class="index-content well">
+    <div class="offset3 well index-text">
+      <h1>David Michael Nelson
+        <small><br />Belo Horizonte - MG / Porto Alegre - RS, Brazil.</small>
+      </h1> 
+      <p><br />Software consultant and developer at <a href="http://thoughtworks.com">ThoughtWorks</a>.</p>
+    </div>
+  </div>
+</div>
