--- a/src/contact.html
+++ b/src/contact.html
@@ -6,7 +6,7 @@ title: contact
 permalink: /contact/
 ---
 <div class="row-fluid">
-  <section class="notifications" />
+  <section class="notifications" ></section>
   <div class="span5">
     <h2>Contact me</h2>
     <p>
