--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@ permalink: /
   <div class="index-content well">
     <div class="offset3 well index-text">
       <h1>David Michael Nelson
-        <small><br />Belo Horizonte - MG / Porto Alegre - RS, Brazil.</small>
-      </h1> 
-      <p><br />Software consultant and developer at <a href="http://thoughtworks.com">ThoughtWorks</a>.</p>
+        <small><br />Belo Horizonte - MG, Brazil.</small>
+      </h1>
+      <p><br />Software engineer at <a href="http://woboinc.com">Woboinc</a>.</p>
     </div>
   </div>
 </div>
